Fix scrollbars UI for dark theme

--- a/docs/.vuepress/theme/styles/index.styl
+++ b/docs/.vuepress/theme/styles/index.styl
@@ -27,6 +27,9 @@
 /* Cookiebot */
 @import 'cookiebot'
 
+html {
+  color-scheme light
+}
 
 body {
   font-size: 15px;
