--- a/docs/.vuepress/theme/styles/theme-dark.styl
+++ b/docs/.vuepress/theme/styles/theme-dark.styl
@@ -2,6 +2,10 @@
 
 html.theme-dark {
 
+  color-scheme dark
+  // works on Firefox
+  scrollbar-color $scrollbarThumb $backgroundColor
+
   &,
   div#app,
   header,
@@ -102,39 +106,9 @@ html.theme-dark {
     }
   }
 
-  /* Scrollbar stylings */
-  scrollbar() {
-    // works on Chrome, Edge, and Safari
-    &::-webkit-scrollbar {
-      width 12px // width of the entire scrollbar
-      height 12px // height of the entire scrollbar
-    }
-
-    &::-webkit-scrollbar-track {
-      background $backgroundColor // color of the tracking area
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background-color $scrollbarThumb // color of the scroll thumb
-      border-radius 20px // roundness of the scroll thumb
-      border 2px solid $backgroundColor // creates padding around scroll thumb
-    }
-
-    &::-webkit-scrollbar-corner {
-      background $backgroundColor
-    }
-
-    // works on Firefox
-    & {
-      scrollbar-width thin
-      scrollbar-color $scrollbarThumb $backgroundColor
-    }
-  }
-
   /* Sidebar */
   .sidebar {
     border-right-color $sectionBorderColor
-    scrollbar()
 
     // sidebar collapsible headings
     & .sidebar-heading {
@@ -170,7 +144,6 @@ html.theme-dark {
   /* Table of contents */
   .table-of-contents {
     border-left-color $sectionBorderColor
-    scrollbar()
 
     .toc-container-header {
       color $fontColor
@@ -231,14 +204,6 @@ html.theme-dark {
         &#code {
           pre {
             padding 20px 24px
-
-            scrollbar()
-          }
-        }
-
-        &#html {
-          pre {
-            scrollbar()
           }
         }
       }
@@ -287,13 +252,6 @@ html.theme-dark {
     background $codeBackground
   }
 
-  /* Language specific code blocks */
-  div[class*="language-"] {
-    pre {
-      scrollbar()
-    }
-  }
-
   /* KBD element */
   kbd {
     color $kbdFontColor
@@ -308,11 +266,6 @@ html.theme-dark {
     p {
       color $fontColor
     }
-  }
-
-  /* Table styling starts */
-  .scrollable-table {
-    scrollbar()
   }
 
   table:not(.selected-preview *):not(.pika-table):not(.htCore) {
@@ -380,10 +333,6 @@ html.theme-dark {
       background $backgroundColor !important
       border-color $sectionBorderColor
     }
-  }
-
-  #CybotCookiebotDialogDetailBodyContentCookieContainerTypeDetails, #CybotCookiebotDialogDetailBodyContentTextAbout {
-    scrollbar()
   }
 
   .CybotCookiebotDialogDetailBodyContentCookieContainerTypes {
